# womm

./: .gitattributes  .gitignore  LICENSE  README.md  build_all.sh  build_image.sh  cleanup_fs.sh  parallel.yml  release.sh  serve_fs.sh  serve_fs_ip.sh  serve_vars.sh  server-deployment.yml  setup.cfg  setup.py  task-deployment.yml  update_image.sh  womm-parallel.sh  womm.py
fs-export/: Dockerfile
fs-proxy/: Dockerfile  deployment.yml.template  entrypoint.sh
fs-server/: Dockerfile  allocate_share.sh  authorized_keys  entrypoint.sh
leader/: Dockerfile  attach.sh
womm/: Dockerfile  __init__.py  __main__.py  bestsh  cluster-setup.yml  common.py  id_rsa  leader-job.yml  parallel  parallel.py  server-deployment.yml  setup.py  sudo  sudo.c  task-deployment.yml  trapper
