[metadata]
name = womm
version = attr: womm.__version__
url = https://github.com/rhelmot/womm
license = zlib
license_files = LICENSE
description = Works On My Machine - quick-set glue for scaling scripts with kubernetes
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    psutil
    tabulate
    python-dateutil

python_requires = >= 3.6
include_package_data = True
packages = find:

[options.package_data]
womm =
    bestsh
    Dockerfile
    parallel
    sudo
    sudo.c
    task-deployment.yml
    server-deployment.yml
    trapper

[options.entry_points]
console_scripts =
    womm = womm.__main__:main
